Snapshot 5931be8dc1

* Fix dialogs color. (marco)

Snapshot 40da3581a5

* Adapt to xulrunner 1.9 alpha 6. (marco)