@@ -1,3 +1,5 @@
+* Make it work with the latest xulrunner. (marco)
+
 Snapshot 5931be8dc1
 
 * Fix dialogs color. (marco)
